# PointCloudPhotoProjection

./: .gitignore  CMakeLists.txt  README.md  animator.cpp  animator.h  const_data.h  defines.h  image_projector.cpp  killme.py  package.xml  point_cloud_loader.cpp  point_projector.cpp  render.cpp  test.cpp
src/: animator.cpp  animator.h  const_data.h  image_loader.h  image_projector.cpp  image_projector.h  listener.cpp  mock_sender.cpp  point_cloud_loader.cpp  point_cloud_loader.h  point_cloud_loader_pcl.h  point_projector.cpp  point_projector.h
src/code/: image_loader.cpp  image_projector.h  point_cloud_loader.h  point_projector.h  render.cpp
